--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [build-system]
-requires = ["setuptools>=42.0.0", "wheel"]
+requires = ["setuptools>=42.0.0", "tiled[array,minimal-client]", "wheel"]
 build-backend = "setuptools.build_meta"
 
 [options.entry_points]
