--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,8 +3,9 @@ requires = ["setuptools>=42.0.0", "wheel"]
 build-backend = "setuptools.build_meta"
 
 [project]
-name = napari-tiled
-depedencies = ["tiled[array,minimal-client]"]
+name = "napari-tiled"
+version = "0"  # HACK
+dependencies = ["tiled[array,minimal-client]"]
 
 [options.entry_points]
 napari.manifest = "napari_tiled_browser:napari.yaml"
